# book-library

./: .env.example  .gitignore  Data.txt  README.md  pyproject.toml  requirements.txt
onlinelib/: db.sqlite3  manage.py  requirements.txt
onlinelib/app/: apps.py  models.py  urls.py  views.py
onlinelib/app/dataset/: Demo.json  analysis.ipynb  similarity.json  test.txt
onlinelib/app/management/commands/: import_data.py  truncate.py
onlinelib/app/migrations/: 0001_initial.py  0002_remove_book_id_remove_book_pages_and_more.py  0003_remove_book_category_remove_book_cover_image_and_more.py
onlinelib/app/static/css/: default.css
onlinelib/app/templates/: base.html  book.html  books.html  contact.html  footer.html  home.html
onlinelib/onlinelib/: asgi.py  settings.py  urls.py  wsgi.py
