[project]
name = "llm-book-shop"
version = "0.1.0"
description = "A book shop application powered by LLMs"
requires-python = ">=3.10"
authors = [
    { name = "Exiler", email="shaukoay.dev@gmail.com"},
]
dependencies = [
    "black>=25.1.0",
    "django>=5.2.4",
    "ipykernel>=6.30.0",
    "langflow>=0.0.46",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
]
